--- a/source/package.json
+++ b/source/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "frontend-builder-wordpress",
+	"name": "gulp-starter-wordpress",
 	"version": "1.0.0",
-	"description": "Frontend Builder  (Wordpress version) - Project builder for web development.",
+	"description": "Gulp Starter (Wordpress version) - Project builder for web development.",
 	"main": "gulpfile.js",
 	"scripts": {
-		"test": "runtest"
+		"test": "run test"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Xgraf/frontend-builder-wordpress.git"
+		"url": "https://github.com/GrafSoul/gulp-starter-wordpress.git"
 	},
 	"keywords": [
 		"project",
@@ -23,27 +23,29 @@
 	],
 	"author": "Dmitriy Zatulovskiy",
 	"license": "MIT",
-	"homepage": "https://github.com/Xgraf",
+	"homepage": "https://github.com/GrafSoul",
 	"devDependencies": {
-		"browser-sync": "^2.26.3",
-		"gulp": "^3.9.1",
-		"gulp-autoprefixer": "^6.0.0",
-		"gulp-clean-css": "^3.10.0",
+		"browser-sync": "^2.26.7",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^7.0.1",
+		"gulp-clean-css": "^4.3.0",
 		"gulp-concat": "^2.6.1",
-		"gulp-filesize": "^0.0.6",
-		"gulp-if": "^2.0.2",
-		"gulp-imagemin": "^4.1.0",
+		"gulp-filesize": "0.0.6",
+		"gulp-htmlhint": "^3.0.1",
+		"gulp-if": "^3.0.0",
+		"gulp-imagemin": "^7.1.0",
 		"gulp-jshint": "^2.1.0",
-		"gulp-load-plugins": "^1.5.0",
+		"gulp-load-plugins": "^2.0.3",
 		"gulp-notify": "^3.2.0",
-		"gulp-plumber": "^1.2.0",
-		"gulp-rename": "^1.4.0",
-		"gulp-sass": "^4.0.2",
-		"gulp-sourcemaps": "^2.6.4",
+		"gulp-plumber": "^1.2.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-sass": "^4.1.0",
+		"gulp-sourcemaps": "^2.6.5",
 		"gulp-svg-sprite": "^1.5.0",
-		"gulp-uglify": "^3.0.1",
-		"gulp-zip": "^4.2.0",
-		"gulp.spritesmith": "^6.9.0",
-		"imagemin-pngquant": "^6.0.0"
+		"gulp-uglify": "^3.0.2",
+		"gulp-zip": "^5.0.2",
+		"gulp.spritesmith": "^6.11.0",
+		"imagemin-pngquant": "^9.0.0",
+		"node-sass": "^4.14.1"
 	}
 }
